cyrus-lyrics-web/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: cyrus-lyrics-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: cyrus-lyrics-web
        image: alkrauss48/cyrus-lyrics-web:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "4Mi"
            cpu: "1m"
          limits:
            memory: "50Mi"
            cpu: "20m"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 3
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: cyrus-lyrics-web
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: frontend
